force-app/main/default/objects/Care_Team_Assignment__c/Care_Team_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assignment of staff to a care journey or patient case.</description>
    <label>Care Team Assignment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Care Team Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Team Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>