force-app/main/default/objects/Care_Team_Assignment__c/fields/Care_Journey__c.field-meta.xml
<CustomField>
<fullName>Care_Journey__c</fullName>
<label>Care Journey</label>
<type>Lookup</type>
<referenceTo>Care_Journey__c</referenceTo>
</CustomField>