force-app/main/default/objects/Care_Team_Assignment__c/fields/Clinician_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Clinician_External_Id__c</fullName>
    <label>External clinician</label>
    <length>64</length>
    <type>Text</type>
</CustomField>