force-app/main/default/objects/Care_Team_Assignment__c/fields/Clinician_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Name__c</fullName>
    <label>dates</label>
    <length>120</length>
    <type>Text</type>
</CustomField>