force-app/main/default/objects/Care_Team_Assignment__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CareTeamAssignmentOwnerUser</relationshipName>
    <type>Lookup</type>
</CustomField>